<resources>
    <string name="app_name">M&amp;M Sorter</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_about">About Us</string>
    <string name="color_red">Red</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_blue">Blue</string>
    <string name="color_green">Green</string>
    <string name="color_orange">Orange</string>
    <string name="color_brown">Brown</string>
    <string name="color_unidentified">Unidentified</string>
    <string name="button_show_percentages">Show All Percentages</string>
    <string name="button_clear_all">Clear All</string>
    <string name="button_stop">Stop</string>
    <string name="button_start">Start</string>
    <string name="button_pause">Pause</string>
    <string name="button_stats">Stats</string>
    <string name="button_refresh">Refresh</string>
    <string name="bau">Bahcesehir University</string>
</resources>
